[package]
name = "monkeyterm"
version = "0.1.0"
edition = "2021"
description = "A monkeytype-inspired terminal typing test"
license = "MIT"
repository = "https://github.com/nathom/monkeyterm"
keywords = ["typing", "terminal", "tui", "monkeytype"]
categories = ["command-line-utilities"]
exclude = ["data/languages/*_10k.txt", "data/languages/*_20k.txt", "data/languages/*_25k.txt", "data/languages/*_40k.txt", "data/languages/*_50k.txt", "data/languages/*_60k.txt", "data/languages/*_70k.txt", "data/languages/*_75k.txt", "data/languages/*_100k.txt", "data/languages/*_150k.txt", "data/languages/*_200k.txt", "data/languages/*_250k.txt", "data/languages/*_280k.txt", "data/languages/*_320k.txt", "data/languages/*_375k.txt", "data/languages/*_400k.txt", "data/languages/*_450k.txt", "data/languages/*_550k.txt", "data/languages/*_600k.txt", "data/languages/*_650k.txt"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
